fix(mg-popover): remove useless z-index
CORE-2306

--- a/src/components/molecules/mg-popover/mg-popover.scss
+++ b/src/components/molecules/mg-popover/mg-popover.scss
@@ -28,7 +28,6 @@ $mg-popover-padding-vertical: var(--mg-popover-padding-vertical, 1.5rem);
 
   mg-card {
     position: relative;
-    z-index: -1;
   }
 
   &[data-show] {
@@ -142,13 +141,16 @@ $mg-popover-padding-vertical: var(--mg-popover-padding-vertical, 1.5rem);
     &[data-popper-placement^='top'] {
       padding-bottom: 0;
     }
+
     &[data-popper-placement^='bottom'] {
       padding-top: 0;
     }
+
     &[data-popper-placement$='end'],
     &[data-popper-placement^='left'] {
       padding-right: 0;
     }
+
     &[data-popper-placement$='start'],
     &[data-popper-placement^='right'] {
       padding-left: 0;
